# automusicplayer

./: .gitignore  2세대음방시스템.spec  LICENSE  README.md  app_icon_util.py  app_meta.py  broadcast_window.py  build.bat  build.ps1  build.spec  config.json.example  config_store.py  main.py  network_utils.py  panel_log.py  panel_window.py  playback_recovery.py  playlist_store.py  prepare_webview2_runtime.py  requirements-optional.txt  requirements.txt  server.py  single_instance.py  startup.py  state.py  tray_icon.py  webview2_runtime.py  win_desktop.py  youtube_dash_mux.py  youtube_download_cache.py  youtube_prefetch.py  youtube_search.py  youtube_util.py
broadcast/: index.html
comcigan-lib/: .gitignore  README.md
comcigan-lib/node/: LICENSE  README.md  package-lock.json  package.json
comcigan-lib/node/examples/: basic.mjs
comcigan-lib/node/src/: client.ts  errors.ts  http.ts  index.ts  parser.ts  routes.ts  types.ts
comcigan-lib/python/: .gitignore  README.md  pyproject.toml
comcigan-lib/python/.github/workflows/: publish-pypi.yml
comcigan-lib/python/comsigan/: __init__.py  _http.py  client.py  errors.py  parser.py  routes.py  types.py
comcigan-lib/python/examples/: basic.py
comcigan-lib/scripts/: probe_st.py  probe_timetable.py  test_live.py
panel/: auth.html  index.html
panel/static/css/: style.css
panel/static/js/: app-modal.js  panel.js  window-chrome.js
tools/: youtube_live_player.py
