[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comsigan"
version = "1.0.0"
description = "컴시간알리미(comci.net) 학생 시간표 비공식 Python 클라이언트"
readme = "README.md"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [{ name = "jaewondeveloper" }]
keywords = ["comsigan", "comcigan", "comci", "timetable", "school", "korea", "컴시간"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jaewondeveloper/comsigan-api-python"
Repository = "https://github.com/jaewondeveloper/comsigan-api-python"
Issues = "https://github.com/jaewondeveloper/comsigan-api-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["comsigan*"]
